<resources>
    <string name="app_name">AAD Practice Project</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="no_actionbar">Sorry, action bar does not exist</string>
    <string name="top_learner_badge">Top learner badge</string>
    <string name="total_top_hours">%1$d learning hours, %2$s</string>
    <string name="total_top_score">%1$d skill IQ score, %2$s</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>
    <string name="email_address">Email Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="project_submission">Project Submission</string>
    <string name="back_navigation">Back navigation</string>
    <string name="google_africa_developer_scholarship">Google Africa Developer Scholarship</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="question_mark">\?</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string name="all_fields_must_be_filled">All fields must be filled</string>
    <string name="email_address_is_not_valid">Email address is not valid</string>
    <string name="project_link_is_not_valid">Project link is not valid</string>
    <string name="no_internet_connection">Your internet connection is not active</string>
</resources>
