<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/project_submission"
                    android:textColor="@color/yellow"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="48dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/background_form_divider"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_vertical"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name_EditText"
                        style="@style/SubmissionForm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords"
                        android:nextFocusDown="@id/last_name_EditText"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name_EditText"
                        style="@style/SubmissionForm"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords"
                        android:nextFocusDown="@id/email_address_EditText"
                        />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_address_EditText"
                    style="@style/SubmissionForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_vertical"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/project_link_EditText"
                    style="@style/SubmissionForm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_margin_vertical"
                    android:hint="@string/project_on_github_link"
                    android:imeOptions="actionDone"
                    android:inputType="textUri"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submit_Button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/background_form_button"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:minHeight="0dp"
                    android:paddingHorizontal="36dp"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    app:backgroundTintMode="add"
                    tools:ignore="UnusedAttribute"
                    />

            </LinearLayout>

        </ScrollView>

        <include
            android:id="@+id/loading_Layout"
            layout="@layout/layout_loading"
            />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
